add component relationship definition
